CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(nnstreamer-ros C CXX)

OPTION(TIZEN "Enable Tizen build mode" OFF)
OPTION(ENABLE_TEST "Enable tests" ON)

SET(NNS_VERSION "1.6.0")
ADD_DEFINITIONS(-DNNS_VERSION="${NNS_VERSION}")

IF(NOT ROS_VERSION)
  SET(ROS_VERSION "melodic")
ENDIF (NOT ROS_VERSION)

IF(NOT ROS_BASE_PREFIX)
  SET(ROS_BASE_PREFIX "/opt/ros/${ROS_VERSION}")
ENDIF(NOT ROS_BASE_PREFIX)

IF(NOT ROS_INSTALL_PREFIX)
  SET(ROS_INSTALL_PREFIX ${ROS_BASE_PREFIX})
ENDIF(NOT ROS_INSTALL_PREFIX)

## Configure ROS-related path
SET(ROS_ROOT "${CMAKE_PREFIX_PATH}/ros")
SET(ROS_INSTALL_LIBDIR "lib")
SET(ROS_INSTALL_BINDIR "bin")
SET(ROS_INSTALL_INCLUDEDIR "include")

## Override CMake Variables
SET(CMAKE_PREFIX_PATH "${ROS_BASE_PREFIX}")
SET(CMAKE_INSTALL_PREFIX "${ROS_INSTALL_PREFIX}")
SET(CMAKE_INSTALL_LIBDIR "${ROS_INSTALL_LIBDIR}")
SET(CMAKE_INSTALL_BINDIR "${ROS_INSTALL_BINDIR}")
SET(CMAKE_INSTALL_INCLUDEDIR "${ROS_INSTALL_INCLUDEDIR}")

## Configure variables to use in build
SET(ENV{LD_LIBRARY_PATH} "${CMAKE_PREFIX_PATH}/lib:$ENV{LD_LIBRARY_PATH}")
SET(ROS_BASE_INCLUDE_DIR "${CMAKE_PREFIX_PATH}/include")

## Set the directory where the NNS plugins will be placed
SET(NNS_INSTALL_GSTDIR "${ROS_INSTALL_LIBDIR}/gstreamer-1.0")

FIND_PACKAGE(PkgConfig REQUIRED)
SET(PKG_COMMON_MODULES
  glib-2.0
  gstreamer-1.0
  nnstreamer
)

IF(TIZEN)
  # Enable dlog of Tizen.
  SET(PKG_COMMON_MODULES ${PKG_COMMON_MODULES} dlog)
ENDIF(TIZEN)

PKG_CHECK_MODULES(PKGS_COMMON REQUIRED ${PKG_COMMON_MODULES})

INCLUDE_DIRECTORIES(
  ./common/include
  ${PKGS_COMMON_INCLUDE_DIRS}
  ${ROS_BASE_INCLUDE_DIR}
  )

SET(c_flags -Wall -Werror -fPIC -g -std=c89)
SET(cxx_flags -Wall -Werror -fPIC -g -std=c++11)
ADD_COMPILE_OPTIONS(
  "$<$<COMPILE_LANGUAGE:C>:${c_flags}>"
  "$<$<COMPILE_LANGUAGE:CXX>:${cxx_flags}>"
)

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(gst)

IF(ENABLE_TEST)
  ENABLE_TESTING()
  ADD_SUBDIRECTORY(tests)
ENDIF(ENABLE_TEST)
