<?xml version="1.0"?>
<package format="2">
  <name>nns_ros_bridge</name>
  <version>0.1.1</version>
  <description>A bridge for ROS support within NNStreamer</description>
  <maintainer email="wook16.song@samsung.com">Wook Song</maintainer>
  <author email="woo16.song@samsung.com">Wook Song</author>

  <license>LGPLv2.1</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
