<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nns_ros2_bridge</name>
  <version>0.0.1</version>
  <description>A bridge for ROS2 support within NNStreamer</description>
  <maintainer email="wook16.song@samsung.com">wook</maintainer>
  <author>Wook Song</author>
  <license>LGPLv2.1</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>pluginlib</depend>
  <depend>rcutils</depend>
  <depend>rosbag2_storage</depend>
  <depend>sqlite3_vendor</depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rosbag2_converter_default_plugins</exec_depend>
  <exec_depend>rosbag2_storage_default_plugins</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
