SET(PKG_MODULES
  gstreamer-base-1.0
)

PKG_CHECK_MODULES(PKGS REQUIRED ${PKG_MODULES})

ADD_LIBRARY(tensor_ros_sink tensor_ros_sink.c)
ADD_DEPENDENCIES(tensor_ros_sink nns_ros_bridge)
TARGET_INCLUDE_DIRECTORIES(tensor_ros_sink PRIVATE
  ${PKGS_INCLUDE_DIRS}
)

TARGET_LINK_LIBRARIES(tensor_ros_sink
  nns_ros_bridge
  ${PKGS_COMMON_LIBRARIES}
  ${PKGS_LIBRARIES}
)

IF(CATKIN_DEVEL_PREFIX)
  SET_TARGET_PROPERTIES(tensor_ros_sink
    PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CATKIN_DEVEL_PREFIX}/${NNS_INSTALL_GSTDIR}
  )
ENDIF(CATKIN_DEVEL_PREFIX)

INSTALL(TARGETS tensor_ros_sink
  RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/${NNS_INSTALL_GSTDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}
)
