SET(PKG_MODULES
  gstreamer-base-1.0
)

PKG_CHECK_MODULES(PKGS REQUIRED ${PKG_MODULES})

IF(WITH_ROS1)
  SET(NNS_ROS_BRIDGE nns_ros_bridge)
ELSEIF(WITH_ROS2)
  SET(NNS_ROS_BRIDGE nns_ros_bridge2)
ENDIF(WITH_ROS1)

ADD_LIBRARY(tensor_ros_sink SHARED tensor_ros_sink.c)
ADD_DEPENDENCIES(tensor_ros_sink ${NNS_ROS_BRIDGE})
TARGET_INCLUDE_DIRECTORIES(tensor_ros_sink PRIVATE
  ${PKGS_INCLUDE_DIRS}
)

TARGET_LINK_LIBRARIES(tensor_ros_sink
  ${NNS_ROS_BRIDGE}
  ${PKGS_COMMON_LIBRARIES}
  ${PKGS_LIBRARIES}
)

IF(CATKIN_DEVEL_PREFIX)
  SET_TARGET_PROPERTIES(tensor_ros_sink
    PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CATKIN_DEVEL_PREFIX}/${NNS_INSTALL_GSTDIR}
  )
ENDIF(CATKIN_DEVEL_PREFIX)

INSTALL(TARGETS tensor_ros_sink
  RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/${NNS_INSTALL_GSTDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}
)
