SET(PKG_MODULES
  gstreamer-base-1.0
)

PKG_CHECK_MODULES(PKGS REQUIRED ${PKG_MODULES})

IF(WITH_ROS1)
  SET(NNS_ROS_BRIDGE nns_ros_bridge)
  SET(NNS_ROS_SINK tensor_ros_sink)
ELSEIF(WITH_ROS2)
  SET(NNS_ROS_BRIDGE nns_ros_bridge2)
  SET(NNS_ROS_SINK tensor_ros2_sink)
ENDIF(WITH_ROS1)

ADD_LIBRARY(${NNS_ROS_SINK} SHARED tensor_ros_sink.c)
ADD_DEPENDENCIES(${NNS_ROS_SINK} ${NNS_ROS_BRIDGE})
TARGET_INCLUDE_DIRECTORIES(${NNS_ROS_SINK} PRIVATE
  ${PKGS_INCLUDE_DIRS}
)

TARGET_LINK_LIBRARIES(${NNS_ROS_SINK}
  ${NNS_ROS_BRIDGE}
  ${PKGS_COMMON_LIBRARIES}
  ${PKGS_LIBRARIES}
)

IF(CATKIN_DEVEL_PREFIX)
  SET_TARGET_PROPERTIES(${NNS_ROS_SINK}
    PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CATKIN_DEVEL_PREFIX}/${NNS_INSTALL_GSTDIR}
  )
ENDIF(CATKIN_DEVEL_PREFIX)

INSTALL(TARGETS ${NNS_ROS_SINK}
  RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/${NNS_INSTALL_GSTDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}
)
